refs EWL-5608: fix the IE11 layout issues.

--- a/styleguide/source/assets/scss/03-organisms/_footer.scss
+++ b/styleguide/source/assets/scss/03-organisms/_footer.scss
@@ -140,12 +140,16 @@
 
     &__left {
       order: 1;
-      flex: 1 0px;
+      flex-grow: 0;
+      flex-shrink: 0;
+      flex-basis: 66.666%;
     }
 
     &__right {
       order: 2;
-      width: calc(100% / 3 * 1);
+      flex-grow: 0;
+      flex-shrink: 0;
+      flex-basis: 33.333%;
     }
 
     &__menu-products {
